Switch Recipe to Event Place, Generate controller, views and all necessary

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
     <%= f.input :photo, as: :file %>
 
     <%= f.input :role, 
-                collection: [["Chef", "Chef"], ["Viewer", "Viewer"]],
+                collection: [["Host", "Host"], ["Guest", "Guest"]],
                 prompt: "Select your role", 
                 required: true %> <!-- Dropdown for role selection -->
   </div>
