Style the Event Pages

--- a/app/views/event_places/edit.html.erb
+++ b/app/views/event_places/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Event Place</h1>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1 class="text-center">Edit Event Place</h1>
 
-<%= render 'form', event_place: @event_place %>
+      <%= render 'form', event_place: @event_place %>
+    </div>
+  </div>
+</div>
