--- a/app/views/event_places/_form.html.erb
+++ b/app/views/event_places/_form.html.erb
@@ -10,6 +10,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, @event_place.new_record? ? "Create Event Place" : "Update Event Place" %>
+    <%= f.button :submit, @event_place.new_record? ? "Create Event Place" : "Update Event Place", class: "btn btn-success" %>
   </div>
 <% end %>
