--- a/app/views/event_places/index.html.erb
+++ b/app/views/event_places/index.html.erb
@@ -1,30 +1,38 @@
-<h1>Event Places</h1>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-10">
+      <h1 class="text-center">Event Places</h1>
 
-<%= link_to 'New Event Place', new_event_place_path, class: 'btn btn-primary' %>
+      <div class="text-right mb-3">
+        <%= link_to 'New Event Place', new_event_place_path, class: 'btn btn-primary' %>
+      </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Location</th>
-      <th>Category</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @event_places.each do |event_place| %>
-      <tr>
-        <td><%= event_place.name %></td>
-        <td><%= truncate(event_place.description, length: 100) %></td>
-        <td><%= event_place.location %></td>
-        <td><%= event_place.category&.name || 'N/A' %></td>
-        <td>
-          <%= link_to 'Show', event_place_path(event_place), class: 'btn btn-info' %>
-          <%= link_to 'Edit', edit_event_place_path(event_place), class: 'btn btn-warning' %>
-          <%= link_to 'Delete', event_place_path(event_place), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Location</th>
+            <th>Category</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @event_places.each do |event_place| %>
+            <tr>
+              <td><%= event_place.name %></td>
+              <td><%= truncate(event_place.description, length: 100) %></td>
+              <td><%= event_place.location %></td>
+              <td><%= event_place.category&.name || 'N/A' %></td>
+              <td>
+                <%= link_to 'Show', event_place_path(event_place), class: 'btn btn-info btn-sm' %>
+                <%= link_to 'Edit', edit_event_place_path(event_place), class: 'btn btn-warning btn-sm' %>
+                <%= link_to 'Delete', event_place_path(event_place), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
