--- a/app/views/event_places/new.html.erb
+++ b/app/views/event_places/new.html.erb
@@ -1,1 +1,9 @@
-<%= render 'form', event_place: @event_place %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1 class="text-center">Edit Event Place</h1>
+
+      <%= render 'form', event_place: @event_place %>
+    </div>
+  </div>
+</div>
