--- a/app/views/event_places/show.html.erb
+++ b/app/views/event_places/show.html.erb
@@ -1,17 +1,24 @@
-<h1><%= @event_place.name %></h1>
-<p><%= @event_place.description %></p>
-<p><%= @event_place.location %></p>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1 class="text-center"><%= @event_place.name %></h1>
+      <p class="lead"><%= @event_place.description %></p>
+      <p><strong>Location:</strong> <%= @event_place.location %></p>
 
-<% if @event_place.category %>
-  <p>Category: <%= @event_place.category.name %></p>
-<% end %>
+      <% if @event_place.category %>
+        <p><strong>Category:</strong> <%= @event_place.category.name %></p>
+      <% end %>
 
-
-<% if @event_place.photos.attached? %>
-  <h2>Photos</h2>
-  <div class="photos">
-    <% @event_place.photos.each do |photo| %>
-      <%= image_tag photo %>
-    <% end %>
+      <% if @event_place.photos.attached? %>
+        <h2>Photos</h2>
+        <div class="row">
+          <% @event_place.photos.each do |photo| %>
+            <div class="col-md-4 mb-3">
+              <%= image_tag photo, class: 'img-fluid rounded' %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
