--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Favorites#index</h1>
-<p>Find me in app/views/favorites/index.html.erb</p>
+<div class="container mt-4">
+  <h1 class="text-center">Your Favorite Event Places</h1>
+
+  <% if @favorites.any? %>
+    <div class="row mt-4">
+      <% @favorites.each do |favorite| %>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <%= image_tag favorite.event_place.photos.first, class: "card-img-top", alt: "#{favorite.event_place.name} Image" if favorite.event_place.photos.attached? %>
+            <div class="card-body">
+              <h5 class="card-title"><%= favorite.event_place.name %></h5>
+              <p class="card-text"><%= truncate(favorite.event_place.description, length: 100) %></p>
+              <p class="card-text"><strong>Location:</strong> <%= favorite.event_place.location %></p>
+              <%= link_to 'View Event Place', event_place_path(favorite.event_place), class: 'btn btn-info' %>
+              <%= link_to 'Remove from Favorites', favorite_path(favorite), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <p class="text-center">You have no favorite event places yet.</p>
+  <% end %>
+
+  <div class="text-center mt-4">
+    <%= link_to 'Browse All Event Places', event_places_path, class: 'btn btn-primary' %>
+  </div>
+</div>
