--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <%= link_to "Create EventPlace", new_event_place_path, class: "nav-link" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Favorites", favorites_index_path, class: "nav-link" %>
+          </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= cl_image_tag current_user.photo.key, class: "avatar", alt: "dropdown menu" %>
