--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,6 +38,6 @@
   </div>
 
   <footer class="mt-5 mb-3 text-muted">
-    <p>&copy; 2024 Event Space Finder. All rights reserved.</p>
+    <p>&copy; <%= Time.current.year %> Event Space Finder. All rights reserved.</p>
   </footer>
 </div>
