--- a/app/views/event_places/show.html.erb
+++ b/app/views/event_places/show.html.erb
@@ -4,6 +4,12 @@
       <h1 class="text-center"><%= @event_place.name %></h1>
       <p class="lead"><%= @event_place.description %></p>
       <p><strong>Location:</strong> <%= @event_place.location %></p>
+      <p>
+        <strong>Host:</strong>
+        <%= @event_place.user.username if @event_place.user.present? %>
+        <%= image_tag @event_place.user.photo.attached? ? @event_place.user.photo : "https://kitt.lewagon.com/placeholder/users/harrytimbog", 
+                        class: 'rounded-circle', style: 'width: 40px; height: 40px; margin-left: 10px;' %>
+      </p>
 
       <% if @event_place.category %>
         <p><strong>Category:</strong> <%= @event_place.category.name %></p>
@@ -20,12 +26,27 @@
         </div>
       <% end %>
 
-      <div class="text-center mt-4">
-        <%= simple_form_for :favorite, url: favorites_new_path, method: :post do |form| %>
-          <%= form.hidden_field :event_place_id, value: @event_place.id %>
-          <%= form.submit 'Add to Favorites', class: 'btn btn-primary' %>
+      <% if current_user %>
+        <div class="text-center mt-4">
+          <% if favorite = current_user.favorites.find_by(event_place_id: @event_place.id) %>
+            <%= link_to 'Remove from Favorites', favorite_path(favorite), 
+                        method: :delete, 
+                        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, 
+                        class: 'btn btn-danger' %>
+
+          <% else %>
+            <%= simple_form_for :favorite, url: favorites_path, method: :post do |form| %>
+              <%= form.hidden_field :event_place_id, value: @event_place.id %>
+              <%= form.submit 'Add to Favorites', class: 'btn btn-primary' %>
+            <% end %>
+          <% end %>
+        </div>
         <% end %>
-      </div>
     </div>
+
+    <div style="width: 100%; height: 600px; margin-top: 30px;"
+         data-controller="map"
+         data-map-markers-value="<%= @markers.to_json %>"
+         data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   </div>
 </div>
