--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
             <%= link_to "Create EventPlace", new_event_place_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Favorites", favorites_index_path, class: "nav-link" %>
+            <%= link_to "Favorites", favorites_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
