Style my Registration and Login Pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -45,6 +45,6 @@
   </div>
 
   <footer class="mt-5 mb-3 text-muted text-center">
-    <p>&copy; <%= Time.current.year %> Event Space Finder. All rights reserved.</p>
+    <p>&copy; <%= Time.current.year %> WolfEvents. All rights reserved.</p>
   </footer>
 </div>
