--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,59 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow-sm">
+        <div class="card-header text-center">
+          <h2>Edit <%= resource_name.to_s.humanize %></h2>
+        </div>
+        <div class="card-body">
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
+            
+            <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+            <div class="form-group mb-3">
+              <%= f.input :email, required: true, autofocus: true, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
+            </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p class="text-info">Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+            <% end %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+            <div class="form-group mb-3">
+              <%= f.input :password,
+                          hint: "Leave it blank if you don't want to change it",
+                          required: false,
+                          input_html: { autocomplete: "new-password", class: 'form-control' },
+                          label_html: { class: 'form-label' } %>
+            </div>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+            <div class="form-group mb-3">
+              <%= f.input :password_confirmation,
+                          required: false,
+                          input_html: { autocomplete: "new-password", class: 'form-control' },
+                          label_html: { class: 'form-label' } %>
+            </div>
+
+            <div class="form-group mb-3">
+              <%= f.input :current_password,
+                          hint: "We need your current password to confirm your changes",
+                          required: true,
+                          input_html: { autocomplete: "current-password", class: 'form-control' },
+                          label_html: { class: 'form-label' } %>
+            </div>
+
+            <div class="d-grid gap-2">
+              <%= f.button :submit, "Update", class: "btn btn-primary" %>
+            </div>
+
+          <% end %>
+        </div>
+
+        <div class="card-footer text-center">
+          <h3>Cancel my account</h3>
+          <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger mt-2" %></div>
+          <%= link_to "Back", :back, class: "btn btn-link mt-3" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
