--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,70 @@
-<h2>Sign up</h2>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow-sm">
+        <div class="card-header text-center">
+          <h2>Sign up</h2>
+        </div>
+        <div class="card-body">
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true, class: 'form-horizontal' }) do |f| %>
+            
+            <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }) do |f| %>
-  <%= f.error_notification %>
+            <div class="form-group mb-3">
+              <%= f.input :email,
+                          required: true,
+                          autofocus: true,
+                          input_html: { autocomplete: "email", class: 'form-control' },
+                          label_html: { class: 'form-label' } %>
+            </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-    <%= f.input :username, required: true %>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :photo, as: :file %>
+            <div class="form-group mb-3">
+              <%= f.input :username, 
+                          required: true, 
+                          input_html: { class: 'form-control' },
+                          label_html: { class: 'form-label' } %>
+            </div>
 
-    <%= f.input :role, 
-                collection: [["Host", "Host"], ["Guest", "Guest"]],
-                prompt: "Select your role", 
-                required: true %> <!-- Dropdown for role selection -->
+            <div class="form-group mb-3">
+              <%= f.input :password,
+                          required: true,
+                          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                          input_html: { autocomplete: "new-password", class: 'form-control' },
+                          label_html: { class: 'form-label' } %>
+            </div>
+
+            <div class="form-group mb-3">
+              <%= f.input :password_confirmation,
+                          required: true,
+                          input_html: { autocomplete: "new-password", class: 'form-control' },
+                          label_html: { class: 'form-label' } %>
+            </div>
+
+            <div class="form-group mb-3">
+              <%= f.input :photo, as: :file, 
+                          input_html: { class: 'form-control' }, 
+                          label_html: { class: 'form-label' } %>
+            </div>
+
+            <div class="form-group mb-3">
+              <%= f.input :role, 
+                          collection: [["Host", "Host"], ["Guest", "Guest"]],
+                          prompt: "Select your role", 
+                          required: true,
+                          input_html: { class: 'form-control' },
+                          label_html: { class: 'form-label' } %> 
+            </div>
+
+            <div class="d-grid gap-2">
+              <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+            </div>
+
+          <% end %>
+        </div>
+        <div class="card-footer text-center">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
