--- a/app/views/event_places/index.html.erb
+++ b/app/views/event_places/index.html.erb
@@ -1,20 +1,20 @@
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-11">
-      <h1 class="text-center">Event Places</h1>
+      <h1 class="text-center mb-4">Event Places</h1>
 
       <div class="text-right mb-3">
         <%= link_to 'New Event Place', new_event_place_path, class: 'btn btn-primary' %>
       </div>
 
-      <table class="table table-striped">
-        <thead>
+      <table class="table table-striped table-bordered">
+        <thead class="thead-light">
           <tr>
             <th>Name</th>
             <th>Description</th>
             <th>Location</th>
             <th>Category</th>
-            <th>Actions</th>
+            <th class="text-center">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -24,10 +24,13 @@
               <td><%= truncate(event_place.description, length: 100) %></td>
               <td><%= event_place.location %></td>
               <td><%= event_place.category&.name || 'N/A' %></td>
-              <td>
+              <td class="text-center">
                 <%= link_to 'Show', event_place_path(event_place), class: 'btn btn-info btn-sm' %>
-                <%= link_to 'Edit', edit_event_place_path(event_place), class: 'btn btn-warning btn-sm' %>
-                <%= link_to 'Delete', event_place_path(event_place), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+
+                <% if current_user.is_admin? || event_place.user == current_user %>
+                  <%= link_to 'Edit', edit_event_place_path(event_place), class: 'btn btn-warning btn-sm' %>
+                  <%= link_to 'Delete', event_place_path(event_place), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+                <% end %>
               </td>
             </tr>
           <% end %>
