--- a/app/views/event_places/show.html.erb
+++ b/app/views/event_places/show.html.erb
@@ -26,6 +26,7 @@
         </div>
       <% end %>
 
+      <!-- Favorite Buttons for Logged In Users -->
       <% if current_user %>
         <div class="text-center mt-4">
           <% if favorite = current_user.favorites.find_by(event_place_id: @event_place.id) %>
@@ -41,7 +42,15 @@
             <% end %>
           <% end %>
         </div>
-        <% end %>
+
+        <!-- Edit and Delete Buttons for Admins or Event Owner -->
+        <div class="text-center mt-3">
+          <% if current_user.is_admin? || @event_place.user == current_user %>
+            <%= link_to 'Edit', edit_event_place_path(@event_place), class: 'btn btn-warning btn-sm' %>
+            <%= link_to 'Delete', event_place_path(@event_place), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+          <% end %>
+        </div>
+      <% end %>
     </div>
 
     <div style="width: 100%; height: 600px; margin-top: 30px;"
